Fixed type chart spacing

--- a/src/components/type-chart/type-chart.module.scss
+++ b/src/components/type-chart/type-chart.module.scss
@@ -55,4 +55,5 @@
 .abbreviatedType {
     padding-left: 0;
     padding-right: 0;
+    width: unset;
 }
